--- a/spring-boot-jms/pom.xml
+++ b/spring-boot-jms/pom.xml
@@ -57,6 +57,17 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.mq</groupId>
+            <artifactId>com.ibm.mq.allclient</artifactId>
+            <version>9.0.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
