--- a/spring-boot-jms/pom.xml
+++ b/spring-boot-jms/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>com.ibm.mq.allclient</artifactId>
             <version>9.0.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
