--- a/spring-boot-webflux/pom.xml
+++ b/spring-boot-webflux/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <modules>
+        <module>spring-boot-webflux-web</module>
+        <module>spring-boot-webflux-rest</module>
+        <module>spring-boot-webflux-app</module>
+        <module>spring-boot-webflux-parent</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
