--- a/spring-boot-webflux/pom.xml
+++ b/spring-boot-webflux/pom.xml
@@ -20,7 +20,7 @@
 
 
     <groupId>org.example</groupId>
-    <artifactId>spring-boot-webflux</artifactId>
+    <artifactId>spring-boot-com.mailshine.springboot.webflux</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
