--- a/spring-boot-webflux/spring-boot-webflux-app/pom.xml
+++ b/spring-boot-webflux/spring-boot-webflux-app/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-boot-webflux</artifactId>
+        <artifactId>spring-boot-com.mailshine.springboot.webflux</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-webflux-app</artifactId>
+    <artifactId>spring-boot-com.mailshine.springboot.webflux-app</artifactId>
 
 
 </project>
