--- a/spring-boot-webflux/spring-boot-webflux-rest/pom.xml
+++ b/spring-boot-webflux/spring-boot-webflux-rest/pom.xml
@@ -2,10 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
+<!--    <parent>
         <artifactId>spring-boot-webflux</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
+    </parent>-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.4.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
