--- a/spring-boot-webflux/spring-boot-webflux-app/pom.xml
+++ b/spring-boot-webflux/spring-boot-webflux-app/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-boot-com.mailshine.springboot.webflux</artifactId>
-        <groupId>org.example</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.4.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-com.mailshine.springboot.webflux-app</artifactId>
+    <artifactId>spring-boot-webflux-app</artifactId>
 
 
 </project>
