--- a/spring-boot-webflux/spring-boot-webflux-parent/pom.xml
+++ b/spring-boot-webflux/spring-boot-webflux-parent/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-com.mailshine.springboot.webflux-parent</artifactId>
+    <artifactId>spring-boot-webflux-parent</artifactId>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
