Spring boot RabbitMQ config and additional changes

--- a/spring-boot-rabbitmq/src/main/resources/application.properties
+++ b/spring-boot-rabbitmq/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.rabbitmq.host=localhost
+spring.rabbitmq.post=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.passowrd=guest
+queue=myQueue
+exchange.name=myExchange
+routing.key=myRoutingKey
