--- a/spring-boot-kafka-avro/src/main/resources/application.properties
+++ b/spring-boot-kafka-avro/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 kafka.bootstrap.address=localhost:9092
-kafka.topic.name=shine-test-local-topic
-kafka.consumer=shine-local
+kafka.topic.name=shine-test-local-avro-topic
+kafka.consumer=shine-local-avro
