--- a/spring-boot-mapstruct/pom.xml
+++ b/spring-boot-mapstruct/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
+            <artifactId>mapstruct-jdk8</artifactId>
             <version>1.3.1.Final</version>
         </dependency>
         <dependency>
