message handling using Consumer Functional Interface

--- a/spring-boot-message-consumer/pom.xml
+++ b/spring-boot-message-consumer/pom.xml
@@ -52,6 +52,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+        </dependency>
     </dependencies>
 
 
