logback mdc examples

--- a/spring-boot-hystrix/src/main/resources/application.properties
+++ b/spring-boot-hystrix/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 management.endpoints.web.exposure.include=*
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.mailshine=DEBUG
+# output to a file
+logging.file=app.log
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
