--- a/spring-boot-resilience4j/pom.xml
+++ b/spring-boot-resilience4j/pom.xml
@@ -21,5 +21,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-circuitbreaker</artifactId>
+            <version>1.7.1</version>
+        </dependency>
     </dependencies>
 </project>
